--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,5 +1,5 @@
 TARGET = ex00
 
-SRCS = main.cpp Dog.cpp Cat.cpp Animal.cpp
+SRCS = main.cpp Dog.cpp Cat.cpp Animal.cpp WrongCat.cpp WrongAnimal.cpp
 
 include ../template.mk
