--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,5 +1,5 @@
 TARGET = ex01
 
-SRCS = main.cpp Dog.cpp Cat.cpp Animal.cpp WrongCat.cpp WrongAnimal.cpp
+SRCS = main.cpp Dog.cpp Cat.cpp Animal.cpp WrongCat.cpp WrongAnimal.cpp Brain.cpp
 
 include ../template.mk
