--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -1,5 +1,5 @@
 TARGET = ex03
 
-SRCS = AMateria.cpp
+SRCS = AMateria.cpp Character.cpp Cure.cpp Ice.cpp main.cpp MateriaSource.cpp
 
 include ../template.mk
